feat: completes the 'markets' route

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -68,10 +68,12 @@ body {
 
   input,
   .q-field__native {
+    font-size: 1.6rem;
     color: $labels;
     &:active,
     &:focus {
       outline: none;
+      box-shadow: none !important;
       color: $labels;
     }
   }
@@ -85,7 +87,12 @@ body {
 
 .q-field--standout.q-field--highlighted .q-field__control {
   background: rgb(255 255 255);
+
   box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.1);
+}
+
+.q-field--standout .q-field__control:before {
+  background: rgb(255 255 255) !important;
 }
 
 .q-field--dense .q-field__append + .q-field__append {
