feat: completes routes creation

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -99,3 +99,9 @@ body {
   padding-left: 2px;
   color: $labels;
 }
+
+.q-form {
+  @media screen and (max-width: 425px) {
+    height: 100%;
+  }
+}
